Fixed project block overflow on some smaller screens

--- a/src/Stylesheets/Projects.css
+++ b/src/Stylesheets/Projects.css
@@ -352,7 +352,8 @@ input:checked + .slider:before {
 #ProjectBlock {
 	background-color: #8895b3;
 	background: linear-gradient(115deg, #2d3c6262 0%, #8895b3 100%);
-	height: calc(100vh - 1.5em * 4);
+	min-height: calc(100vh - 1.5em * 4);
+	height: auto;
 }
 #ProjectHeading {
 	padding-top: 2vh;
